--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Post-Operative MJOA and Outcome Predictor</h1>
+        <h1>Post-Operative MJOA and Outcome Predictor at 1 year</h1>
         <form id="calculator-form">
             <label for="preMJOA">Pre-op MJOA:</label>
             <div class="slider-wrapper">
